examples/test/testpolicy14089.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14089
  namespace: namespace160
spec:
  podSelector:
    matchLabels:
      key37: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value14
          key45: value12
      podSelector:
        matchLabels:
          key4: value33
          key26: value24
